feat: apply Java 9-25 syntax modernization and Wicket 8-10 improvements
- Convert Commit.java to record (JDK 16+)
- Pattern matching instanceof in Projeto.java and TestSmell.java (JDK 16+)
- Stream.toList() in WicketApplication.java
- var declarations in 37+ local variables (JDK 10+)
- HexFormat.of().formatHex() replacing bytesToHex loop (JDK 17+)
- String.formatted() in toString methods
- lista.getFirst() in ProjetosPage.java (JDK 21+)
- BookmarkablePageLink<Void> replacing Link<String> anonymous classes in BasePage.java
- #46: add PathFile column to CSV evolution output
- Bump version to 2.4.3, jnose-core to 0.9.4